--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 #! Python 3.14
+torch 
+torchvision 
+torchaudio 
+--index-url https://download.pytorch.org/whl/cu124
 ctranslate2
 transformers
 SpeechRecognition
 numpy
-#ffmpeg, cuBLAS for CUDA 12.4, cuDNN for CUDA 12.4
+pyaudio
+#NEEDS ffmpeg
